tests/ui/errors/snapshots/infer_duplicate_binding_in_slice_rest_pattern.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate binding
   ╭─[test.lis:3:8]
 2 │ fn main() {
 3 │   let [x, ..x] = [1, 2, 3];
   ·        ┬    ┬
   ·        │    ╰── used again
   ·        ╰── first use of `x`
 4 │ }
   ╰────
  help: Remove the duplicate binding · code: [infer.duplicate_binding_in_pattern]
