tests/ui/errors/snapshots/infer_duplicate_const.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate constant
   ╭─[test.lis:3:7]
 2 │ const MAX = 100
 3 │ const MAX = 200
   ·       ─┬─
   ·        ╰── already defined
 4 │ 
   ╰────
  help: `MAX` is already defined in this package. Rename or remove this definition · code: [infer.duplicate_definition]
