tests/ui/errors/snapshots/infer_duplicate_enum.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate enum
   ╭─[test.lis:3:6]
 2 │ enum Dir { North, South }
 3 │ enum Dir { East, West }
   ·      ─┬─
   ·       ╰── already defined
 4 │ 
   ╰────
  help: `Dir` is already defined in this package. Rename or remove this definition · code: [infer.duplicate_definition]
