tests/ui/errors/snapshots/infer_duplicate_function.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate function
   ╭─[test.lis:3:4]
 2 │ fn greet() -> string { "hello" }
 3 │ fn greet() -> string { "world" }
   ·    ──┬──
   ·      ╰── already defined
 4 │ 
   ╰────
  help: `greet` is already defined in this package. Rename or remove this definition · code: [infer.duplicate_definition]
