tests/ui/errors/snapshots/infer_duplicate_impl_item.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate name in impl
    ╭─[test.lis:9:6]
  8 │ impl Foo {
  9 │   fn bar(self: Foo) {}
    ·      ─┬─
    ·       ╰── method name already taken
 10 │ }
    ╰────
  help: Method `bar` is already defined for type `Foo`. Rename one of the methods · code: [infer.duplicate_impl_item]
