tests/ui/errors/snapshots/infer_duplicate_import.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate import
   ╭─[main.lis:3:10]
 2 │ import a "utils"
 3 │ import b "utils"
   ·          ───┬───
   ·             ╰── already imported above
 4 │ 
   ╰────
  help: Package `utils` is already imported. Remove the duplicate import · code: [resolve.duplicate_import]
