tests/ui/errors/snapshots/infer_duplicate_import_blank_after_named.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Invalid import
   ╭─[main.lis:3:8]
 2 │ import u "utils"
 3 │ import _ "utils"
   ·        ┬
   ·        ╰── only allowed for Go packages
 4 │ 
   ╰────
  help: Remove the underscore. Blank imports are allowed only for Go imports, because Lisette packages have no `init()` side effects · code: [resolve.blank_import_non_go]
