tests/ui/errors/snapshots/infer_duplicate_struct.snap
---
source: tests/ui/errors/mod.rs
---
  ✕ Duplicate struct
   ╭─[test.lis:3:8]
 2 │ struct Point { x: int, y: int }
 3 │ struct Point { x: float64, y: float64 }
   ·        ──┬──
   ·          ╰── already defined
 4 │ 
   ╰────
  help: `Point` is already defined in this package. Rename or remove this definition · code: [infer.duplicate_definition]
